# ZapFiles

./: .gitignore  .pre-commit-config.yaml  LICENSE  README-ru.md  README.md  app_configuration.py  auto_update.py  base_configuration.py  build.bat  build.py  cli.py  client.py  config_file.py  configuration.py  env.py  experiments_configuration.py  gui.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  server.py  setup_script.iss  shared.py  shared_functions.py  translate.py
.github/ISSUE_TEMPLATE/: bug_report.md
assets/: ZapFiles-logo.psd  repository-preview.psd
config/: app_configuration.py  base_configuration.py  experiments_configuration.py
experiments/: config_file.py  experiments_config.py
gui/: index.html  script.js  style.css
lang/: en.json  ru.json
shared/: auto_update.py  env.py  file_hash.py  localization.py  shared.py
zapfiles/: __main__.py
zapfiles/cli/: __init__.py
zapfiles/client/: __init__.py
zapfiles/constants/: __init__.py
zapfiles/core/config/: __init__.py  app_configuration.py  base_configuration.py  experiments_configuration.py
zapfiles/core/hash/: __init__.py
zapfiles/core/localization/: __init__.py
zapfiles/core/updater/: __init__.py
zapfiles/server/: __init__.py
