[project]
name = "zapfiles"
version = "2.0.0"
description = "A secure file transfer tool that ensures the privacy of your data through end-to-end encryption."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "cryptography>=45.0.6",
    "prettytable>=3.16.0",
    "questionary>=2.1.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.12",
    "pre-commit>=4.3.0",
    "pyright[nodejs]>=1.1.403",
    "ruff>=0.12.9",
]
